--- a/Vgg16_2.ipynb
+++ b/Vgg16_2.ipynb
@@ -20,8 +20,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# TODO\n",
+    "- more aggresive data augmentation\n",
+    "- more aggressive dropout\n",
+    "- use of L1 and L2 regularization (also known as \"weight decay\")\n",
+    "- fine-tuning one more convolutional block (alongside greater regularization)\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 72,
    "metadata": {
     "collapsed": true
    },
@@ -34,14 +45,14 @@
     "validation_data_dir = 'data/valid'\n",
     "nb_train_samples = 5919\n",
     "nb_validation_samples = 444\n",
-    "nb_epochs = 10\n",
+    "nb_epochs = 15\n",
     "batch_size = 16\n",
     "nb_classes = 3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +66,12 @@
    ],
    "source": [
     "# prepare data augmentation configuration\n",
-    "train_datagen = ImageDataGenerator(rescale=1. / 255)\n",
+    "train_datagen = ImageDataGenerator(rescale=1. / 255,\n",
+    "                                  zoom_range=0.2,\n",
+    "                                  rotation_range=40, \n",
+    "                                  width_shift_range=0.2,\n",
+    "                                  height_shift_range=0.2,\n",
+    "                                  fill_mode='nearest')\n",
     "\n",
     "test_datagen = ImageDataGenerator(rescale=1. / 255)\n",
     "\n",
@@ -74,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 74,
    "metadata": {
     "collapsed": true
    },
@@ -86,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 76,
    "metadata": {
     "collapsed": true
    },
@@ -112,12 +128,14 @@
    "source": [
     "x = base_model.output\n",
     "x = Flatten()(x)\n",
+    "x = Dense(256, activation='relu', kernel_initializer='glorot_uniform')(x)\n",
+    "x = Dropout(0.5)(x)\n",
     "predictions = Dense(nb_classes, activation='softmax', kernel_initializer='glorot_uniform')(x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 77,
    "metadata": {
     "collapsed": true
    },
@@ -130,14 +148,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 input_5\n",
+      "0 input_6\n",
       "1 block1_conv1\n",
       "2 block1_conv2\n",
       "3 block1_pool\n",
@@ -168,14 +186,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 input_5\n",
+      "0 input_6\n",
       "1 block1_conv1\n",
       "2 block1_conv2\n",
       "3 block1_pool\n",
@@ -194,8 +212,10 @@
       "16 block5_conv2\n",
       "17 block5_conv3\n",
       "18 block5_pool\n",
-      "19 flatten_5\n",
-      "20 dense_8\n"
+      "19 flatten_6\n",
+      "20 dense_9\n",
+      "21 dropout_4\n",
+      "22 dense_10\n"
      ]
     }
    ],
@@ -208,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 80,
    "metadata": {
     "collapsed": true
    },
@@ -222,15 +242,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "19 flatten_5\n",
-      "20 dense_8\n"
+      "19 flatten_6\n",
+      "20 dense_9\n",
+      "21 dropout_4\n",
+      "22 dense_10\n"
      ]
     }
    ],
@@ -244,7 +266,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 83,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "input_6 (InputLayer)         (None, 224, 224, 3)       0         \n",
+      "_________________________________________________________________\n",
+      "block1_conv1 (Conv2D)        (None, 224, 224, 64)      1792      \n",
+      "_________________________________________________________________\n",
+      "block1_conv2 (Conv2D)        (None, 224, 224, 64)      36928     \n",
+      "_________________________________________________________________\n",
+      "block1_pool (MaxPooling2D)   (None, 112, 112, 64)      0         \n",
+      "_________________________________________________________________\n",
+      "block2_conv1 (Conv2D)        (None, 112, 112, 128)     73856     \n",
+      "_________________________________________________________________\n",
+      "block2_conv2 (Conv2D)        (None, 112, 112, 128)     147584    \n",
+      "_________________________________________________________________\n",
+      "block2_pool (MaxPooling2D)   (None, 56, 56, 128)       0         \n",
+      "_________________________________________________________________\n",
+      "block3_conv1 (Conv2D)        (None, 56, 56, 256)       295168    \n",
+      "_________________________________________________________________\n",
+      "block3_conv2 (Conv2D)        (None, 56, 56, 256)       590080    \n",
+      "_________________________________________________________________\n",
+      "block3_conv3 (Conv2D)        (None, 56, 56, 256)       590080    \n",
+      "_________________________________________________________________\n",
+      "block3_pool (MaxPooling2D)   (None, 28, 28, 256)       0         \n",
+      "_________________________________________________________________\n",
+      "block4_conv1 (Conv2D)        (None, 28, 28, 512)       1180160   \n",
+      "_________________________________________________________________\n",
+      "block4_conv2 (Conv2D)        (None, 28, 28, 512)       2359808   \n",
+      "_________________________________________________________________\n",
+      "block4_conv3 (Conv2D)        (None, 28, 28, 512)       2359808   \n",
+      "_________________________________________________________________\n",
+      "block4_pool (MaxPooling2D)   (None, 14, 14, 512)       0         \n",
+      "_________________________________________________________________\n",
+      "block5_conv1 (Conv2D)        (None, 14, 14, 512)       2359808   \n",
+      "_________________________________________________________________\n",
+      "block5_conv2 (Conv2D)        (None, 14, 14, 512)       2359808   \n",
+      "_________________________________________________________________\n",
+      "block5_conv3 (Conv2D)        (None, 14, 14, 512)       2359808   \n",
+      "_________________________________________________________________\n",
+      "block5_pool (MaxPooling2D)   (None, 7, 7, 512)         0         \n",
+      "_________________________________________________________________\n",
+      "flatten_6 (Flatten)          (None, 25088)             0         \n",
+      "_________________________________________________________________\n",
+      "dense_9 (Dense)              (None, 256)               6422784   \n",
+      "_________________________________________________________________\n",
+      "dropout_4 (Dropout)          (None, 256)               0         \n",
+      "_________________________________________________________________\n",
+      "dense_10 (Dense)             (None, 3)                 771       \n",
+      "=================================================================\n",
+      "Total params: 21,138,243\n",
+      "Trainable params: 6,423,555\n",
+      "Non-trainable params: 14,714,688\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,17 +349,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 84,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "embedding_layer_list=['block5_pool', 'dense_10']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tbCallBack = TensorBoard(log_dir='./Graph', histogram_freq=0, write_graph=True, write_images=True)\n",
+    "#histogram_freq=0, write_graph=True, write_grads=False, write_images=False, embeddings_freq=0, embeddings_layer_names=None, embeddings_metadata=None)\n",
+    "tbCallBack = TensorBoard(log_dir='./Graph', histogram_freq=1, write_graph=True, write_images=True, embeddings_freq=1, embeddings_layer_names=embedding_layer_list)\n",
     "callbacks_list.append(tbCallBack)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +393,32 @@
       "368/369 [============================>.] - ETA: 3s - loss: 0.6407 - acc: 0.7423Epoch 00000: val_loss improved from inf to 1.32566, saving model to vgg16-weights-improvement-00-1.33.hdf5\n",
       "369/369 [==============================] - 1427s - loss: 0.6399 - acc: 0.7425 - val_loss: 1.3257 - val_acc: 0.5093\n",
       "Epoch 2/10\n",
-      "145/369 [==========>...................] - ETA: 767s - loss: 0.4662 - acc: 0.8073"
+      "368/369 [============================>.] - ETA: 3s - loss: 0.5161 - acc: 0.7822Epoch 00001: val_loss did not improve\n",
+      "369/369 [==============================] - 1395s - loss: 0.5157 - acc: 0.7825 - val_loss: 1.4163 - val_acc: 0.5093\n",
+      "Epoch 3/10\n",
+      "368/369 [============================>.] - ETA: 3s - loss: 0.4335 - acc: 0.8247Epoch 00002: val_loss did not improve\n",
+      "369/369 [==============================] - 1358s - loss: 0.4334 - acc: 0.8250 - val_loss: 1.5321 - val_acc: 0.4676\n",
+      "Epoch 4/10\n",
+      "368/369 [============================>.] - ETA: 3s - loss: 0.3618 - acc: 0.8602Epoch 00003: val_loss improved from 1.32566 to 1.19533, saving model to vgg16-weights-improvement-03-1.20.hdf5\n",
+      "369/369 [==============================] - 1352s - loss: 0.3611 - acc: 0.8606 - val_loss: 1.1953 - val_acc: 0.5787\n",
+      "Epoch 5/10\n",
+      "368/369 [============================>.] - ETA: 3s - loss: 0.2825 - acc: 0.9022Epoch 00004: val_loss did not improve\n",
+      "369/369 [==============================] - 1348s - loss: 0.2826 - acc: 0.9023 - val_loss: 1.4761 - val_acc: 0.4954\n",
+      "Epoch 6/10\n",
+      "368/369 [============================>.] - ETA: 3s - loss: 0.2550 - acc: 0.9142Epoch 00005: val_loss did not improve\n",
+      "369/369 [==============================] - 1349s - loss: 0.2549 - acc: 0.9144 - val_loss: 1.2741 - val_acc: 0.5486\n",
+      "Epoch 7/10\n",
+      "368/369 [============================>.] - ETA: 3s - loss: 0.2315 - acc: 0.9245Epoch 00006: val_loss did not improve\n",
+      "369/369 [==============================] - 1353s - loss: 0.2311 - acc: 0.9248 - val_loss: 1.6325 - val_acc: 0.5185\n",
+      "Epoch 8/10\n",
+      "368/369 [============================>.] - ETA: 3s - loss: 0.2163 - acc: 0.9319Epoch 00007: val_loss did not improve\n",
+      "369/369 [==============================] - 1346s - loss: 0.2160 - acc: 0.9320 - val_loss: 1.4544 - val_acc: 0.5116\n",
+      "Epoch 9/10\n",
+      "368/369 [============================>.] - ETA: 3s - loss: 0.1768 - acc: 0.9475Epoch 00008: val_loss did not improve\n",
+      "369/369 [==============================] - 1350s - loss: 0.1768 - acc: 0.9473 - val_loss: 1.5294 - val_acc: 0.5347\n",
+      "Epoch 10/10\n",
+      "368/369 [============================>.] - ETA: 3s - loss: 0.1673 - acc: 0.9485Epoch 00009: val_loss did not improve\n",
+      "369/369 [==============================] - 1353s - loss: 0.1672 - acc: 0.9487 - val_loss: 1.3682 - val_acc: 0.5532\n"
      ]
     }
    ],
@@ -305,16 +435,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved model to disk\n"
+     ]
+    }
+   ],
    "source": [
     "# serialize model to JSON\n",
     "model_json = model.to_json()\n",
-    "with open(\"model_vgg16.json\", \"w\") as json_file:\n",
+    "with open(\"model_vgg16_with_dropout.json\", \"w\") as json_file:\n",
     "    json_file.write(model_json)\n",
     "# serialize weights to HDF5\n",
-    "model.save_weights(\"model_vgg162.h5\")\n",
+    "model.save_weights(\"model_vgg162_with_dropout.h5\")\n",
     "print(\"Saved model to disk\")"
    ]
   },
